[package]
name = "jencli"
version = "0.1.0"
authors = ["François Mockers"]
description = "A tool to work with Jenkins from the command line."
readme = "README.md"
license = "MIT"
keywords = ["jenkins"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/mockersf/jencli"
homepage = "https://github.com/mockersf/jencli"

[dependencies]
jenkins_api = "0.3"
structopt = "0.2"
