[package]
name = "jencli"
version = "0.1.0"
authors = ["François Mockers"]
description = "A tool to work with Jenkins from the command line."
readme = "README.md"
license = "MIT"
keywords = ["jenkins"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/mockersf/jencli"
homepage = "https://github.com/mockersf/jencli"

[dependencies]
jenkins_api = { git = "https://github.com/mockersf/jenkins-api.rs" }
failure = "0.1"
regex = "1.0"

handlebars = "0.32"
ansi_term = "0.11"

structopt = "0.2"
config = "0.8"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"

log = "0.4"
env_logger = "0.5"

[lib]
name = "jencli"
path = "src/lib.rs"

[[bin]]
name = "jencli"
path = "src/main.rs"
