[package]
name = "jencli"
version = "0.1.0"
authors = ["François Mockers"]
description = "A tool to work with Jenkins from the command line."
readme = "README.md"
license = "MIT"
keywords = ["jenkins"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/mockersf/jencli"
homepage = "https://github.com/mockersf/jencli"
edition = "2018"

[dependencies]
jenkins_api = "0.6"
failure = "0.1"
regex = "1.4"

handlebars = "4.3"
ansi_term = "0.12"
chrono = "0.4"

hocon = "0.3"
dirs = "3.0"
structopt = "0.3"
config = "0.10"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

log = "0.4"
env_logger = "0.8"

[lib]
name = "jencli"
path = "src/lib.rs"

[[bin]]
name = "jencli"
path = "src/main.rs"
